# terminal-games

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
bagels/: Cargo.toml
bagels/src/: main.rs
dice_game/: Cargo.toml
dice_game/src/: main.rs
guess_a_number/: Cargo.toml
guess_a_number/src/: main.rs
rock_paper_scissors/: Cargo.toml
rock_paper_scissors/src/: main.rs
snake/: Cargo.toml
snake/src/: main.rs
