[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = { workspace = true }
terminal_size = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
